--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "tailwind": "tailwindcss"
   },
   "dependencies": {
+    "firebase": "^12.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
