--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^10.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "lucide-react": "^0.263.1",
     "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^7.8.2",
     "react-scripts": "5.0.1",
